[package]
name = "cryptoindus"
version = "0.1.0"
authors = ["KhepriJin <jincxmain@outlook.com>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
parking_lot = "0.10.0"
jsonrpc-core = "14.0.3"

sc-cli = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-core = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-service = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-network = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }

cryptoindus-runtime = { path = "./runtime" }
ci-rpc = { path = "./rpc" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }

[workspace]
members = [
    "runtime"
]
