[package]
name = "ci-rpc"
version = "0.1.0"
authors = ["KhepriJin <jincxmain@outlook.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.3"
serde_json = "1.0"
hex = "0.4"

sc-service = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", features = ["test-helpers"] }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }

ci-primitives = { path = "../primitives" }
cryptoindus-runtime = { path = "../runtime" }

cirml-artists-runtime-api = { path = "../cirml/artists/runtime-api" }
cirml-artists-rpc = { path = "../cirml/artists/rpc" }
cirml-artvenuses-runtime-api = { path = "../cirml/artvenuses/runtime-api" }
cirml-artvenuses-rpc = { path = "../cirml/artvenuses/rpc" }
cirml-market-runtime-api = { path = "../cirml/market/runtime-api" }
cirml-market-rpc = { path = "../cirml/market/rpc" }

