[package]
name = "cirml-artvenuses"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }

ci-primitives = { path = "../../primitives", default-features = false }
cirml-balances = { path = "../balances", default-features = false }
cirml-artists =  { path = "../artists", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",

    "ci-primitives/std",
	"cirml-balances/std",
	"cirml-artists/std",
]
runtime-benchmarks = ["frame-benchmarking"]
