[package]
name = "cirml-artists-rpc"
version = "0.1.0"
authors = ["KhepriJin <jincxmain@outlook.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
serde = { version = "1.0.101", features = ["derive"] }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.3"

sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2" }

ci-primitives = { path = "../../../primitives" }
cirml-artists-runtime-api = { path = "../runtime-api" }