[package]
name = "cirml-artvenuses-rpc"
version = "0.1.0"
authors = ["KhepriJin <jincxmain@outlook.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
serde = { version = "1.0.101", features = ["derive"] }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.3"

sp-api = { git = "https://github.com/paritytech/substrate.git", branch="master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch="master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch="master" }

ci-primitives = { path = "../../../primitives" }
cirml-artvenuses-runtime-api = { path = "../runtime-api" }