[package]
name = "cirml-artvenuses-runtime-api"
version = "0.1.0"
authors = ["KhepriJin <jincxmain@outlook.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc2", default-features = false }

ci-primitives = { path = "../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-std/std",
    "sp-runtime/std",

    "ci-primitives/std",
]